Fix horizontal scrolling caused by hamburger menu

--- a/client/src/layouts/Header/Header.module.css
+++ b/client/src/layouts/Header/Header.module.css
@@ -30,7 +30,7 @@
     width: 100%;
     height: 100%;
     padding: 0 15px 15px 15px;
-    left: 0;
+    left: -30px;
     gap: 5px;
     z-index: 999;
     visibility: hidden;
@@ -41,7 +41,6 @@
 
     transition: .2s;
     opacity: 0;
-    transform: translateX(30px);
 }
 
 .list {
@@ -56,12 +55,12 @@
 .dropdown.active {
     visibility: visible;
     opacity: 1;
-    transform: translateX(0px);
+    left: 0;
 }
 
 .list:has(.dropdown.active) {
     opacity: 1;
-    transform: translateX(0px);
+    left: 0;
 }
 
 .item {
@@ -116,6 +115,11 @@
 
 @media (min-width: 768px) {
 
+    .list,
+    .dropdown {
+        left: 0;
+    }
+
     .list {
         width: fit-content;
         height: auto;
@@ -125,24 +129,22 @@
         padding: 0;
         visibility: visible;
         opacity: 1;
-        transform: translateX(0);
     }
 
     .dropdown {
         padding: 5px;
         height: auto;
-        top: calc(100% + 10px);
+        top: 100%;
         width: max-content;
         background-color: var(--surface-10);
         border-radius: calc(var(--border-radius) + 5px);
         border: 1px solid var(--surface-20);
         box-shadow: var(--box-shadow);
-        transform: translate(0, -15px);
         scale: 0.9;
     }
 
     .dropdown.active {
-        transform: translate(0, 0);
+        top: calc(100% + 10px);
         scale: 1;
     }
 
